# data-platform

./: .dockerignore  .gitignore  example.env  pyproject.toml  requirements.txt
.github/workflows/: dev-docker-images.yml  dev-ecr-images.yml  prd-docker-images.yml  prd-ecr-images.yml
dags/: buckets.py  sql_dbs.py
scripts/: create_venv.sh  install.sh  upgrade.sh  validate.sh
workspace/: .gitignore  settings.py
workspace/dev/: postgres.py  resources.py
workspace/dev/airflow/: Dockerfile  build_image.sh  resources.py
workspace/dev/airflow/config/: airflow_requirements.txt
workspace/dev/jupyter/: Dockerfile  build_jupyter_image.sh  resources.py
workspace/dev/jupyter/config/: jupyter_requirements.txt
workspace/example_secrets/: dev_airflow_secrets.yml  prd_airflow_secrets.yml  prd_jupyter_secrets.yml  prd_superset_secrets.yml  prd_traefik_secrets.yml
workspace/prd/: resources.py
workspace/prd/airflow/: Dockerfile  aws_resources.py  build_image.sh  docker_resources.py  k8s_resources.py
workspace/prd/airflow/config/: airflow_requirements.txt
workspace/prd/aws/: acm_certificate.py  eks_cluster.py  s3_buckets.py
